# hawk

./: README.md  hawk.cabal  index.html  params.json
examples/: Pipe1.hs  Pipe2.hs  Pipe3.hs  Pipe4.hs
old_src/: README.TXT
old_src/hawk/: Makefile
old_src/hawk/models/: Config.mk  Makefile  NOTICE.txt
old_src/hawk/models/columbia/: .hugsargs  Columbia.hs  Main.hs  Makefile  OA64_Cluster.hs  OA64_EU.hs  OA64_IFU.hs  OA64_Queue.hs  OA64_RF.hs  OA64_Sift.hs  OA64_Utils.hs  control_logic.smv
old_src/hawk/models/columbia/doc/: RULES  TODO
old_src/hawk/models/example-programs/: 1.c  2.c  3.c  4.hsk  4.s  5.s  6.s  fibbo.c  hanoi.c
old_src/hawk/models/p6/: AQ.lhs  BoundedSet.lhs  EUs.lhs  IFU.lhs  IQ.lhs  Main.lhs  Makefile  Predict.lhs  Processor.lhs  RAT.lhs  RF.lhs  ROB.lhs  ROB_insert.lhs  ROB_retire.lhs  RS.lhs  Utils.lhs  t.hs  test_p6
old_src/hawk/models/pipeline+speculative/: .hugsargs  Components.lhs  Main.lhs  Makefile  PipePredict.lhs  PipeUtils.lhs  Pipeline.lhs  t.hs
old_src/hawk/models/simple/: Components.lhs  Main.lhs  Makefile  Processor.lhs  Utils.lhs
old_src/hawk/simulation/: Makefile  NOTICE.txt
old_src/hawk/simulation/demo/: .hugsargs  Annotations.hs  Palette.hs  Programs.hs
old_src/hawk/simulation/dlx/: .hugsargs  DLX.lhs  DLX_Cell.lhs  DLX_Op.lhs  DLX_Pretty.hs  DLX_Reg.lhs  Makefile  makeMF
old_src/hawk/simulation/doc/: README.WINDOWS  Signatures.html  building-with-ghc.txt  howto.txt
old_src/hawk/simulation/lib/: Arithmetic.lhs  Cell.lhs  Config.mk  Devices.lhs  Hawk.lhs  HawkIO.lhs  Init.lhs  Instruction.lhs  Makefile  Memory.lhs  PipeReg.lhs  PreludeSig.lhs  Prettier.lhs  Probe.lhs  Register.lhs  STEx.lhs  Signal.lhs  StateArray.lhs  Symbo.lhs  Trans.lhs  TransSig.lhs  Utilities.lhs  VRegister.lhs  Words.lhs  haskell_environment  hawk-macros.h  makeMF  mkSignature  unix_environment
old_src/hawk/simulation/oa-64/: Makefile  OA64.hs  OA64_Assm.hs  OA64_Cell.hs  OA64_Op.hs  OA64_Reg.hs  OA64_RegInst.hs
old_src/hawk/simulation/win32/: README  dist_template  runhawk-nofilter.bat  simulate-w32.bat
old_src/visual_hawk/: HaskellVisualHawk.reg  README.TXT  interface.reg  typelib.reg  visualhawk.reg
old_src/visual_hawk/Nest/: .hugsargs  CPU.hs  Test.hs
old_src/visual_hawk/Nest/Probes/: Instruction.23  Instruction.6  Instruction.8  Wire  Wire.10  Wire.11  Wire.15  Wire.16  Wire.18  Wire.21  Wire.27  Wire.28  Wire.3  Wire.31  Wire.32  Wire.8  Wire.9
old_src/visual_hawk/RewriteRules/: AndDelay.vsd  BypassDelay.vsd  Delay.vsd  Delay3.vsd  HazardDelay.vsd  ID.vsd  OrDelay.vsd  RegFile.vsd  RegFileDelay.vsd  RegFileID.vsd
old_src/visual_hawk/lib/: MkVisioHawk.txt  OA64_Demo.hs  Palette-old.hs  Palette.hs  Palette012799.hs  Paletteold.hs  ProxyVisualHawk.hs  ProxyVisualHawk.idl  ProxyVisualHawk.tlb  RawHaz.hs  Symbp6Demo.hs  VisioHawk-orig.hs  VisioHawk.hs  VisualHawk.hs  VisualHawk.hs.$$$  basic_uarch.vss  epic.vss  epic_no_sym.vss  hawkdemo.hs  ild.vss  manual.bat  pipeline.vss  pipeline012799.vss  scrap.hs  simulate.bat  superscalar.vss  t.hs  test.hs  typical.bat  visio.idl
old_src/visual_hawk/lib/txtunits/: alu.txt  annotate.txt  branchtarget.txt  bypass.txt  decr.txt  decrsel.txt  delay.txt  empty.txt  execution.txt  false.txt  findtraps.txt  genfiles.hs  ilen.txt  ilpdata.txt  ilpinstrs.txt  ilpinstrss.txt  index.txt  isbranch.txt  isexectrans.txt  isload.txt  kill.txt  lastpc.txt  mispredicted.txt  modifiespc.txt  mux.txt  neq0.txt  no_ilp_dmem.txt  no_ilp_imem.txt  no_ilp_ss_imem.txt  okay.txt  pipereg.txt  predict.txt  readwritehazard.txt  regfile.txt  reorderbuffer.txt  rmnops.txt  sand.txt  sor.txt  ssbtb.txt  stall.txt  (+4 more)
old_src/visual_hawk/models/: LawDemo.vsd  ShowInMenu.bas  columbia.vsd  drawing3.vsd  p6-retimed.vsd  p6.vsd  p6SymbNotes.txt  p6sym.vsd  pipe1.vsd  pipe2.vsd  pipe2sym.vsd  pipe2symNotes.txt  pipe3.vsd  pipe3sym.vsd  pipe4.vsd  pipefull.vsd  sum1Notes.txt
src/Hawk/: Arithmetic.hs  Cell.hs  DLX.hs  Devices.hs  Instruction.hs  Memory.hs  Register.hs  Signal.hs  Trans.hs
src/Hawk/Basic/: BasicHawk.hs  ISA.hs
src/Hawk/DLX/: Cell.hs  Op.hs  Reg.hs
(+33 files in other folders)
