name:                hawk
version:             0.1.0.0
synopsis:            Haskell for Microprocessor Specifications
description:         A reimplementation of http://web.archive.org/web/20070923041730/http://www.cse.ogi.edu/PacSoft/Hawk/
                     Using modern GHC/Haskell extensions where appropriate.
homepage:            http://christiaanb.github.io/hawk
license:             OtherLicense
license-file:        HAWK_LICENSE.md
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
-- copyright:
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Hawk.Basic.BasicHawk
                       Hawk.Basic.ISA

  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       clash-prelude >= 0.6 && <0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
