name:                hawk
version:             0.1
synopsis:            Haskell for Microprocessor Specifications
description:         A reimplementation of http://web.archive.org/web/20070923041730/http://www.cse.ogi.edu/PacSoft/Hawk/
                     Using modern GHC/Haskell extensions where appropriate.
homepage:            http://christiaanb.github.io/hawk
license:             OtherLicense
license-file:        HAWK_LICENSE.md
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
-- copyright:
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Hawk.Basic.BasicHawk
                       Hawk.Basic.ISA

                       Hawk.Arithmetic
                       Hawk.Cell
                       Hawk.Devices
                       Hawk.DLX
                       Hawk.DLX.Cell
                       Hawk.DLX.Op
                       Hawk.DLX.Reg
                       Hawk.Instruction
                       Hawk.Memory
                       Hawk.Register
                       Hawk.Signal
                       Hawk.Trans

  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5,
                       clash-prelude >= 0.9 && <0.11,
                       data-default >= 0.5.3 && <0.6,
                       lens >= 4.4.0.1 && <5.0,
                       mtl >= 2.2 && < 2.4

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O0 -fno-omit-interface-pragmas -fexpose-all-unfoldings
